Updated DevGuide for Java 17
Signed-off-by: themanojshukla <themanojshukla@gmail.com>